--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
             <li><a href="#">View On GitHub</a></li>
             <li><a href="#">Settings</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
         </div>
       </div>
     </nav>
@@ -58,22 +55,21 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-            <li><a href="">More navigation</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
+            <li class="active"><a href="#">关于 Pratise <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">按钮 button</a></li>
+            <li><a href="#">辅助类 atom</a></li>
+            <li><a href="#">搜索框 searchbar</a></li>
+            <li><a href="#">选项卡 tab</a></li>
+            <li><a href="#">图片轮播 slider</a></li>
+            <li><a href="#">列表 list</a></li>
+            <li><a href="#">表单项 form</a></li>
+            <li><a href="#">表格 table</a></li>
+            <li><a href="#">弹窗 dialog</a></li>
+            <li><a href="#">通知 notice</a></li>
+            <li><a href="#">提示 tips</a></li>
+            <li><a href="#">加载中 loading</a></li>
+            <li><a href="#">网格 grid</a></li>
+            <li><a href="#">进度条 progress</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
