增加源码链接

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">View On GitHub</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="https://github.com/ClearRipples/pratise/tree/master">View On GitHub</a></li>
           </ul>
         </div>
       </div>
