--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="asset/img/favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Pratise - 专注于移动前端 UI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
