--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="asset/img/favicon.ico">
+    <link rel="icon" href="asset/img/bitbug_favicon.ico">
 
     <title>Pratise - 专注于移动前端 UI</title>
 
