修改页面的样式

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Description" content="专注于移动web的UI框架，基于手机QQ规范" />
+    <meta name="Keywords" content="pratise，pratiseui，pratisejs，pratise ui，pratise js" />
+    <meta name="author" content="Wright" />
     <link rel="icon" href="asset/img/bitbug_favicon.ico">
 
     <title>Pratise - 专注于移动前端 UI</title>
