--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <script>
        var $ = jQuery;
         seajs.config({
-          base: "/static/sea-modules/",
+          base: "static/sea-modules/",
           alias: {
             
             "$": "jquery",
             "sticky":"sticky",
-            "side":"/static/side",
+            "side":"side",
             "handlebars": "handlebars"
           }
         });
