--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script>
        var $ = jQuery;
         seajs.config({
-          base: "",
+          base: "statics/sea-modules/",
           alias: {
             
             "$": "jquery",
