--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
     <script type="text/javascript" src = "statics/sea-modules/seajs/seajs/2.2.3/sea.js"></script>
     <script>
-       var $ = jQuery;
+          var $ = jQuery;
         seajs.config({
-          base: "statics/sea-modules/",
+          base: "http://clearripples.github.io/pratise/statics/sea-modules",
           alias: {
             
             "$": "jquery",
             "sticky":"sticky",
-            "side":"side",
+            "side":"/statics/side",
             "handlebars": "handlebars"
           }
         });
