--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="pratise-modules"></div>
 
           <script type="text/javascript">
-             seajs.use(['$','handlebars','/static/side','gallery/underscore/1.6.0/underscore'], function($,Handlebars, Side, _) {
+             seajs.use(['$','handlebars','/statics/side','underscore'], function($,Handlebars, Side, _) {
               //用jquery获取模板
               var tpl   =  $("#list-tpl").html();
               //预编译模板
