--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <script>
           var $ = jQuery;
         seajs.config({
-          base: "http://clearripples.github.io/pratise/statics/sea-modules",
+          base: "http://clearripples.github.io/pratise/statics",
           alias: {
             
-            "$": "jquery",
-            "sticky":"sticky",
-            "side":"/statics/side",
+            "$": "/sea-modules/jquery",
+            "sticky":"/sea-modules/sticky",
+            "side":"side",
             "handlebars": "handlebars"
           }
         });
