--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           base: "http://clearripples.github.io/pratise/statics",
           alias: {
             
-            "$": "/sea-modules/jquery",
-            "sticky":"/sea-modules/sticky",
+            "$": "sea-modules/jquery",
+            "sticky":"sea-modules/sticky",
             "side":"side",
-            "handlebars": "handlebars"
+            "handlebars": "sea-modules/handlebars"
           }
         });
         seajs.use(['sticky','side'], function(Sticky,Side) {
@@ -132,7 +132,7 @@
           <div class="pratise-modules"></div>
 
           <script type="text/javascript">
-             seajs.use(['$','handlebars','/statics/side','underscore'], function($,Handlebars, Side, _) {
+             seajs.use(['$','sea-modules/handlebars','side','sea-modules/underscore'], function($,Handlebars, Side, _) {
               //用jquery获取模板
               var tpl   =  $("#list-tpl").html();
               //预编译模板
