--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
     <script type="text/javascript" src = "statics/sea-modules/seajs/seajs/2.2.3/sea.js"></script>
     <script>
-          var $ = jQuery;
+       var $ = jQuery;
         seajs.config({
-          base: "http://clearripples.github.io/pratise/statics",
+          base: "http://clearripples.github.io/pratise/statics/sea-modules",
           alias: {
             
-            "$": "sea-modules/jquery",
-            "sticky":"sea-modules/sticky",
-            "side":"side",
-            "handlebars": "sea-modules/handlebars"
+            "$": "jquery",
+            "sticky":"sticky",
+            "side":"/statics/side",
+            "handlebars": "handlebars"
           }
         });
         seajs.use(['sticky','side'], function(Sticky,Side) {
@@ -132,7 +132,7 @@
           <div class="pratise-modules"></div>
 
           <script type="text/javascript">
-             seajs.use(['$','sea-modules/handlebars','side','sea-modules/underscore'], function($,Handlebars, Side, _) {
+             seajs.use(['$','sea-moduleshandlebars','side','underscore'], function($,Handlebars, Side, _) {
               //用jquery获取模板
               var tpl   =  $("#list-tpl").html();
               //预编译模板
@@ -237,7 +237,7 @@
               //匹配json内容
               $('.nav-sidebar').html(template(context));
 
-              var deps = $('.side-area li[data-id]');
+              var deps = $('.nav-sidebar li[data-id]');
               _.each(deps, function(dep) {
                   var moduleNode = $($('#pratise-module').html());
                   moduleNode.find('.pratise-module-title a')
