--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style>
+      .side-highlight .nav{display: block}
+      .nav-sidebar .side-highlight{border: none}
+      .nav-sidebar .side-highlight a{background: none}
+      .nav-sidebar .side-highlight > a{border-right: 1px solid #025775;}
+    </style>
+
     <script type="text/javascript" src = "statics/sea-modules/seajs/seajs/2.2.3/sea.js"></script>
     <script>
        var $ = jQuery;
