--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
           <script type="text/javascript">
              seajs.use(['$','sea-modules/handlebars','side','sea-modules/underscore'], function($,Handlebars, Side, _) {
               //用jquery获取模板
+              console.log($("#list-tpl"));
               var tpl   =  $("#list-tpl").html();
+
               //预编译模板
               var template = Handlebars.compile(tpl);
               //模拟json数据
