--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="pratise-modules"></div>
 
           <script type="text/javascript">
-             seajs.use(['$','sea-modules/handlebars','side','sea-modules/underscore'], function($,Handlebars, Side, _) {
+             seajs.use(['$','sea-modules/handlebars','side','sea-modules/underscore'], function($,Handlebars, side, _) {
               //用jquery获取模板
               console.log($("#list-tpl"));
               var tpl   =  $("#list-tpl").html();
