--- a/index.html
+++ b/index.html
@@ -127,21 +127,20 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src = "statics/sea-modules/seajs/seajs/2.2.3/sea.js"></script>
     <script src="bower_components/jquery/dist//jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist//js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="asset/js/vendor/holder.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="asset/js/ie10-viewport-bug-workaround.js"></script>
-
-    <script type="text/javascript" src = "statics/sea-modules/seajs/seajs/2.2.3/sea.js"></script>
     <script>
        var $ = jQuery;
         seajs.config({
           base: "http://clearripples.github.io/pratise/statics",
           alias: {
             
-            "$": "sea-modules/jquery",
+            "$": "sea-modules/jquery.js",
             "sticky":"sea-modules/sticky",
             "side":"side",
             "handlebars": "sea-modules/handlebars"
