--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <script>
        var $ = jQuery;
         seajs.config({
-          base: "http://clearripples.github.io/pratise/statics",
+          base: "http://clearripples.github.io/pratise/statics/",
           alias: {
             
             "$": "sea-modules/jquery.js",
