--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           base: "http://clearripples.github.io/pratise/statics/",
           alias: {
             
-            "$": "sea-modules/jquery.js",
+            "$": "sea-modules/jquery",
             "sticky":"sea-modules/sticky",
             "side":"side",
             "handlebars": "sea-modules/handlebars"
